# isaac-downloader

./: .gitignore  .gitmodules  AGENTS.md  AgibotConverterShell-fast.spec  AgibotConverterShell-full.spec  AgibotConverterShell.spec  BACKEND_EXECUTION_PLAN.md  BUILD_GUIDE.md  BUILD_PLAN.md  CLAUDE.md  Dockerfile.build  PACKAGING_HANDOFF.md  README.md  app.go  app_test.go  build-linux-arm64.sh  build-linux-docker.bat  build-linux-x64.sh  build-linux.sh  build-macos-arm.sh  build-windows.bat  create_robot_icon.py  create_simple_icon.py  go.mod  main.go  pyproject.toml  test_any4_health.py  test_exe.py  wails.json
.claude/: settings.local.json
.github/workflows/: build.yml
backend/: downloader.go  downloader_test.go  fileutils.go  parser.go  parser_test.go
docs/plans/: 2026-02-21-any4-raw-adapter-design.md
frontend/: index.html  package-lock.json  package.json  package.json.md5  vite.config.js
frontend/src/: App.svelte
frontend/src/components/: ControlBar.svelte  FileListDialog.svelte  LogPanel.svelte  PathSelector.svelte  ProgressBar.svelte  Settings.svelte  TaskList.svelte
hooks/: hook-psutil.py
scripts/: build_exe.ps1  build_exe_onefile.ps1  run.ps1  smoke_lerobot_exe.ps1  verify_build_fingerprint.ps1  verify_packaged_any4.ps1
src/agibot_converter/: __init__.py  any4_health.py  any4_runtime.py  any4lerobot_bridge.py  any4lerobot_locator.py  backend.py  discovery.py  main.py  manifest.py  models.py  path_risk.py  precheck.py  process_tracker.py  routing.py
tests/: test_any4_health.py  test_format_contracts.py  test_lerobot_flow.py  test_rosbag_retry.py
(+13 files in other folders)
